[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.12.0"
parse-display = "0.8.2"
parse-display-derive = "0.8.2"
pathfinding = "4.3.2"
regex = "1.10.2"
