[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
parse-display = "0.10.0"
parse-display-derive = "0.10.0"
pathfinding = "4.8.0"

regex = "1.10.2"
num = "0.4.1"
intersect2d = "0.4.2"
geo = "0.28.0"
z3 = "0.12.1"